css/main.css
/* ... */
.blog article:hover .date {
    left: 0;
}
.blog article:hover .date,
.date,
.blog article p:last-child,
.blog article:hover p:last-child {
    transition: left 0.5s;
}
.blog_post-meta li {
    list-style-type: none;
    margin-bottom: 4rem;
}
pre {
    padding: 2rem;
    margin: 2rem;
    border-left: solid 5px rgb(21, 41, 22);
}
/* ========== END Blog Index Styles ========== */
/* ========== Project Archives Styles========== */
/* Note: Blog & Projects indexes share many styles */
article.projects {
    position: relative;
}
.projects_skills {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    align-items: bottom;
    position: absolute; /* Prevents article below from shifting on icon hover*/
    margin-top: 1rem;
}
li.pj_skills_icon {
    list-style-type: none;
    margin-left: 0;
    width: 4em;
    transition: width 0.75s ease;
}
li.pj_skills_icon:hover {
    transition: width 0.5s ease;
    width: 4.75em;
}
.pj_skills_icon a {
    width: 100%;
}
.post-type-archive-projects h2 {
    margin-top: 0.5rem;
}
.search-results .date,
.post-type-archive-projects .date {
    color: rgb(146, 143, 139);
}
/* ========== END Project Archives Styles ========== */
/* ========== Search Results Styles ========== */
/* Many of the applicable styles are shared with Blog Index styles */
.search-results article {
    min-height: 300px;
    background: rgba(63, 73, 64, 0.2);
    margin: 0.5rem;
}
.search-results article h2 {
    font-family: 'Hind', sans-serif;
    font-size: 1.5rem;
}
.search-results article img {
    display: none;
}
.search-results article .date {
    top: 32%;
    padding: 0.5rem 1rem;
    background: rgb(21, 41, 22);
    border-radius: 0 10px 10px 0;
}
.search-results .type-page p:not(.date),
.search-results .type-projects p:not(.date),
.search-results .type-post p:not(.date) {
    position: absolute;
    top: 40%;
    bottom: 0;
    padding: 1rem;
}
/* ========== END Search Results Styles ========== */
/* ========== Blog Styles ========== */
.blog_header {
    position: relative;
    margin: 2rem 1rem;
}
ul.blog_post-meta {
    list-style: none;
    margin: 0;
}
.blog_footer,
.blog_comments {
    margin-top: 3rem;
    text-align: left;
}
.avatar {
    width: 4rem;
    height: unset;
    margin-right: 1rem;
}
li.comment {
    list-style: none;
    margin-bottom: 1rem;
}
.comment-meta,
.comment-options
 {
    display: flex;
    align-items: center;
    margin-bottom: 1rem;
}
.comment-options p.comment_edit,
.comment-options p.reply {
    margin: 1rem 1rem 2rem 0;
}
#reply-title {
    padding-bottom: 1rem;
    margin-top: 3rem;
}
.single aside {
    background-color: rgba(21, 41, 22, 0.9);
    width: 90%;
    margin: 2rem auto;
}
ul.children { /* Replies to other comments */
    margin-left: 3rem;
}
.comment_text {
    padding: 1rem;
    background: rgb( 228, 225, 221);
    color: rgb(2, 10, 16);
    border-radius: 8px;
    margin-top: 1.5rem;
    position: relative;
}
.comment_text::before { /* Create speech bubble effect */
    content: '';
    width: 0;
    height: 0;
    border-bottom: 15px solid rgb( 228, 225, 221);
    border-right: 20px solid transparent;
    border-left: 2px solid transparent;
    position: absolute;
    bottom: 100%;
    left: 10%;
    transform: skewX(22deg);
}
#submit {
    font-size: 1.2rem;
}
form.search {
    display: flex;
    align-items: center;
}
.search .search-submit {
    margin-bottom: 1rem;
    margin-left: 1rem;
}
.sidebar-widget {
    margin-top: 3rem;
}
.single .blog_post-meta {
    justify-content: center;
}
.single .blog_post-meta li {
    color: rgb(160, 160, 150);
    margin-top: 0.25rem;
}
footer.blog_footer,
.single aside {
    padding: 1.5rem 1.5rem 2.5rem;
    border-radius: 10px;
    box-shadow: inset 2px 3px 5px rgba(20, 20, 20, 0.5);
}
footer.blog_footer {
    background-color: rgba(205, 200, 220, 0.5);
}
.single .wp-block-image .alignleft,
.single .wp-block-image .alignright {
	float: none;
	margin: 4rem auto 0 auto;
}
/* ========== END Blog Styles ========== */
/* ========== Contact Styles ========== */
.contact_intro,
.contact_listings,
.contact_form {
	margin: 2.5rem auto 0;
}
li.contact_email,
li.contact_phone {
	display: flex;
	align-items: center;
}
li.contact_email::before,
li.contact_phone::before {
    content: "";
	display: inline-block;
	width:4rem;
	height:4rem;
	background-size:contain;
	margin-right: 1rem;
}
li.contact_phone::before {
    background-image: url(../img/phone-icon.png);
}
li.contact_email::before {
    background-image: url(../img/email-icon.png);
}
div.nf-error-msg,
span.ninja-forms-req-symbol {
    color: rgb(244, 182, 61);
}
.nf-form-fields-required {
    margin-bottom: 1rem;
    color: rgb(175,175,175);
}
textarea {
	height: 100%;
	min-height: 70px;
}
label {
	font-size: 1rem;
    margin-bottom: 0.25rem;
    display: block;
}
.page-id-62 main {
	max-width: 600px;
}
/* ========== END Contact Styles ========== */
/* ========== 404 Page ========== */
#post-404 h2 {
    margin: 1rem;
}
/* ========== END 404 Page ========== */
/* ========== Media Query (more than 450px) ========== */
@media (min-width: 450px) {
    .blog_featured-img {
        width: 7rem;
    }
    .blog_featured-img img {
        box-shadow: inset 2px 3px 5px rgba(2, 10, 16, 0.5);
    }
    .single-projects h1,
    .single h1 {
        width: calc(100% - 7rem);
        height: 7rem;
        margin: 0;
        position: absolute;
        top: 0;
        left: 7rem;
        font-size: 2rem;
        line-height: 2.3rem;
        background: url(../img/star-fade-bkg.jpg) no-repeat;
        background-size: auto 100%;
        padding: 1rem;
        border-radius: 2px 0 0 2px;
        text-shadow: 1px 1px 4px rgba(50, 50, 50, 0.3);
        box-shadow: 2px 3px 5px rgba(2, 10, 16, 0.5);
    }
    ul.blog_post-meta {
        display: flex;
        justify-content: flex-start;
    }
    ul.blog_post-meta li + li {
        margin-left: 1.5rem;
    }
    .single aside {
        width: 80%;
    }
}
/* ... */

